--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-navigation/stack": "^5.0.0",
     "expo": "~36.0.0",
     "formik": "^2.1.4",
+    "moment": "^2.24.0",
     "native-base": "^2.13.8",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
@@ -33,6 +34,7 @@
     "react-native-reanimated": "~1.4.0",
     "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
+    "react-native-star-rating": "^1.1.0",
     "react-native-svg": "9.13.3",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7",
