--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@react-navigation/material-top-tabs": "^5.0.0",
     "@react-navigation/native": "^5.0.0",
     "@react-navigation/stack": "^5.0.0",
+    "accordion-collapse-react-native": "^0.2.8",
     "expo": "~36.0.0",
     "formik": "^2.1.4",
+    "install": "^0.13.0",
     "moment": "^2.24.0",
     "native-base": "^2.13.8",
     "react": "~16.9.0",
