--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/react-native-fontawesome": "^0.2.1",
     "@material-ui/core": "^4.9.1",
     "@react-native-community/async-storage": "^1.7.1",
+    "@react-native-community/datetimepicker": "^2.2.1",
     "@react-native-community/masked-view": "0.1.5",
     "@react-navigation/bottom-tabs": "^5.0.0",
     "@react-navigation/drawer": "^5.0.0",
@@ -31,6 +32,7 @@
     "react-dom": "~16.9.0",
     "react-feather": "^2.0.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
+    "react-native-datepicker": "^1.7.2",
     "react-native-gesture-handler": "~1.5.0",
     "react-native-radio-buttons": "^1.0.0",
     "react-native-reanimated": "~1.4.0",
