--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
     "react-native-datepicker": "^1.7.2",
     "react-native-gesture-handler": "~1.5.0",
+    "react-native-progress-circle": "^2.1.0",
     "react-native-radio-buttons": "^1.0.0",
     "react-native-reanimated": "~1.4.0",
     "react-native-safe-area-context": "0.6.0",
