--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-star-rating": "^1.1.0",
     "react-native-svg": "9.13.3",
+    "react-native-table-component": "^1.2.1",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.1.1",
