--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "~16.9.0",
     "react-feather": "^2.0.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
+    "react-native-chart-kit": "^4.5.0",
     "react-native-datepicker": "^1.7.2",
     "react-native-gesture-handler": "~1.5.0",
     "react-native-progress-circle": "^2.1.0",
@@ -41,6 +42,7 @@
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-star-rating": "^1.1.0",
     "react-native-svg": "9.13.3",
+    "react-native-svg-charts": "^5.3.0",
     "react-native-table-component": "^1.2.1",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7",
