--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@react-navigation/material-top-tabs": "^5.0.0",
     "@react-navigation/native": "^5.0.0",
     "@react-navigation/stack": "^5.0.0",
+    "@reduxjs/toolkit": "^1.3.4",
+    "@types/redux-logger": "^3.0.7",
     "accordion-collapse-react-native": "^0.2.8",
     "expo": "~36.0.0",
     "formik": "^2.1.4",
@@ -54,8 +56,13 @@
     "yup": "^0.28.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.0.0",
+    "@types/jest": "^25.2.1",
+    "@types/react": "^16.9.34",
+    "@types/react-native": "^0.62.2",
+    "@types/react-test-renderer": "^16.9.2",
     "babel-preset-expo": "~8.0.0",
-    "@babel/core": "^7.0.0"
+    "typescript": "^3.8.3"
   },
   "private": true
 }
