--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@react-navigation/native": "^5.0.0",
     "@react-navigation/stack": "^5.0.0",
     "@reduxjs/toolkit": "^1.3.4",
+    "@types/react-redux": "^7.1.7",
     "@types/redux-logger": "^3.0.7",
+    "@types/yup": "^0.26.37",
     "accordion-collapse-react-native": "^0.2.8",
     "expo": "~36.0.0",
     "formik": "^2.1.4",
