--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,11 +5,11 @@
     "esModuleInterop": true,
     "isolatedModules": true,
     "jsx": "react",
-    "lib": ["es6"],
+    "lib": ["es2017"],
     "moduleResolution": "node",
     "noEmit": true,
     "strict": true,
-    "target": "esnext",
+    "target": "es2017",
     "typeRoots": ["./types", "node_modules/@types"]
   },
   "exclude": [
