--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-native-community/async-storage": "^1.7.1",
     "@react-native-community/datetimepicker": "^2.1.0",
     "@react-native-community/masked-view": "0.1.5",
+    "@react-native-community/slider": "^2.0.9",
     "@react-navigation/bottom-tabs": "^5.0.0",
     "@react-navigation/drawer": "^5.0.0",
     "@react-navigation/material-top-tabs": "^5.0.0",
@@ -55,7 +56,9 @@
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
-    "yup": "^0.28.1"
+    "redux-persist-expo-securestore": "^2.0.0",
+    "yup": "^0.28.1",
+    "expo-secure-store": "~8.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
