--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
-    "test": "jest"
+    "test": "jest",
+    "test:watch": "npm run test -- --watch"
   },
   "jest": {
     "preset": "react-native"
@@ -78,6 +79,7 @@
     "jest": "^26.0.1",
     "jest-react-native": "^18.0.0",
     "react-test-renderer": "^16.13.1",
+    "redux-mock-store": "^1.5.4",
     "typescript": "^3.8.3"
   },
   "private": true
